j--/src/jminusminus/Parser.java
// Copyright 2012- Bill Campbell, Swami Iyer and Bahar Akbal-Delibas

package jminusminus;

import java.lang.reflect.Array;
import java.util.ArrayList;

import static jminusminus.TokenKind.*;

/**
 * A recursive descent parser that, given a lexical analyzer (a LookaheadScanner), parses a j--
 * compilation unit (program file), taking tokens from the LookaheadScanner, and produces an
 * abstract syntax tree (AST) for it.
 */
public class Parser {
    // The lexical analyzer with which tokens are scanned.
    private LookaheadScanner scanner;

    // Whether a parser error has been found.
    private boolean isInError;

    // Whether we have recovered from a parser error.
    private boolean isRecovered;

    /**
     * Constructs a parser from the given lexical analyzer.
     *
     * @param scanner the lexical analyzer with which tokens are scanned.
     */
    public Parser(LookaheadScanner scanner) {
        this.scanner = scanner;
        isInError = false;
        isRecovered = true;

        // Prime the pump.
        scanner.next();
    }

    /**
     * Returns true if a parser error has occurred up to now, and false otherwise.
     *
     * @return true if a parser error has occurred up to now, and false otherwise.
     */
    public boolean errorHasOccurred() {
        return isInError;
    }

    /**
     * Parses a compilation unit (a program file) and returns an AST for it.
     *
     * <pre>
     *     compilationUnit ::= [ PACKAGE qualifiedIdentifier SEMI ]
     *                         { IMPORT  qualifiedIdentifier SEMI }
     *                         { typeDeclaration }
     *                         EOF
     * </pre>
     *
     * @return an AST for a compilation unit.
     */
    public JCompilationUnit compilationUnit() {
        int line = scanner.token().line();
        String fileName = scanner.fileName();
        TypeName packageName = null;
        if (have(PACKAGE)) {
            packageName = qualifiedIdentifier();
            mustBe(SEMI);
        }
        ArrayList<TypeName> imports = new ArrayList<TypeName>();
        while (have(IMPORT)) {
            imports.add(qualifiedIdentifier());
            mustBe(SEMI);
        }
        ArrayList<JAST> typeDeclarations = new ArrayList<JAST>();
        while (!see(EOF)) {
            JAST typeDeclaration = typeDeclaration();
            if (typeDeclaration != null) {
                typeDeclarations.add(typeDeclaration);
            }
        }
        mustBe(EOF);
        return new JCompilationUnit(fileName, line, packageName, imports, typeDeclarations);
    }

    /**
     *
     * Parses and returns a qualified identifier.
     *
     * <pre>
     *   qualifiedIdentifier ::= IDENTIFIER { DOT IDENTIFIER }
     * </pre>
     *
     * @return a qualified identifier.
     */
    private TypeName qualifiedIdentifier() {
        int line = scanner.token().line();
        mustBe(IDENTIFIER);
        String qualifiedIdentifier = scanner.previousToken().image();
        while (have(DOT)) {
            mustBe(IDENTIFIER);
            qualifiedIdentifier += "." + scanner.previousToken().image();
        }
        return new TypeName(line, qualifiedIdentifier);
    }

    /**
     * Parses a type declaration and returns an AST for it.
     *
     * <pre>
     *   typeDeclaration ::= modifiers ( classDeclaration | interfaceDeclaration )
     *
     * </pre>
     *
     * @return an AST for a type declaration.
     */
    private JAST typeDeclaration() {
        ArrayList<String> mods = modifiers();
        // When looking at an Interface, return an interfaceDeclaration with arguments the modifiers.
        if (see(INTERFACE)) {
            return interfaceDeclaration(mods);
        } else {
            return classDeclaration(mods);
        }
    }

    /**
     * Parses and returns a list of modifiers.
     *
     * <pre>
     *   modifiers ::= { ABSTRACT | PRIVATE | PROTECTED | PUBLIC | STATIC }
     * </pre>
     *
     * @return a list of modifiers.
     */
    private ArrayList<String> modifiers() {
        ArrayList<String> mods = new ArrayList<String>();
        boolean scannedPUBLIC = false;
        boolean scannedPROTECTED = false;
        boolean scannedPRIVATE = false;
        boolean scannedSTATIC = false;
        boolean scannedABSTRACT = false;
        boolean more = true;
        while (more) {
            if (have(ABSTRACT)) {
                mods.add("abstract");
                if (scannedABSTRACT) {
                    reportParserError("Repeated modifier: abstract");
                }
                scannedABSTRACT = true;
            } else if (have(PRIVATE)) {
                mods.add("private");
                if (scannedPRIVATE) {
                    reportParserError("Repeated modifier: private");
                }
                if (scannedPUBLIC || scannedPROTECTED) {
                    reportParserError("Access conflict in modifiers");
                }
                scannedPRIVATE = true;
            } else if (have(PROTECTED)) {
                mods.add("protected");
                if (scannedPROTECTED) {
                    reportParserError("Repeated modifier: protected");
                }
                if (scannedPUBLIC || scannedPRIVATE) {
                    reportParserError("Access conflict in modifiers");
                }
                scannedPROTECTED = true;
            } else if (have(PUBLIC)) {
                mods.add("public");
                if (scannedPUBLIC) {
                    reportParserError("Repeated modifier: public");
                }
                if (scannedPROTECTED || scannedPRIVATE) {
                    reportParserError("Access conflict in modifiers");
                }
                scannedPUBLIC = true;
            } else if (have(STATIC)) {
                mods.add("static");
                if (scannedSTATIC) {
                    reportParserError("Repeated modifier: static");
                }
                scannedSTATIC = true;
            } else if (have(ABSTRACT)) {
                mods.add("abstract");
                if (scannedABSTRACT) {
                    reportParserError("Repeated modifier: abstract");
                }
                scannedABSTRACT = true;
            } else {
                more = false;
            }
        }
        return mods;
    }

    /**
     * Parses a class declaration and returns an AST for it.
     *
     * <pre>
     *   classDeclaration ::= CLASS IDENTIFIER [ EXTENDS qualifiedIdentifier ]
     *                          [ IMPLEMENTS qualifiedIdentifier { COMMA qualifiedIdentifier } ] classBody
     * </pre>
     *
     * @param mods the class modifiers.
     * @return an AST for a class declaration.
     */
    private JClassDeclaration classDeclaration(ArrayList<String> mods) {
        int line = scanner.token().line();
        mustBe(CLASS);
        mustBe(IDENTIFIER);
        String name = scanner.previousToken().image();
        Type superClass;
        // I am adding a list of type TypeName for the superInterfaces.
        ArrayList<TypeName> superInterfaces = new ArrayList<TypeName>();
        if (have(EXTENDS)) {
            superClass = qualifiedIdentifier();
        } else {
            superClass = Type.OBJECT;
        }
        // implementation for the IMPLEMENTS for the case of the interface
        if (have(IMPLEMENTS)) {
            do {
                // create this list with qualified identifiers if you encounter an IMPLEMENTS
                superInterfaces.add(qualifiedIdentifier());
            } while (have(COMMA));
        } else {
            // otherwise the list is going to be empty
            superInterfaces = null;
        }
        return new JClassDeclaration(line, mods, name, superClass, superInterfaces, classBody());
    }

    /**
     * Parses an interface declaration and returns an AST for it.
     *
     * <pre>
     *   interfaceDeclaration ::= INTERFACE IDENTIFIER [ EXTENDS qualifiedIdentifier { COMMA qualifiedIdentifier} ]
     *                              interfaceBody
     * </pre>
     *
     * @return an AST for an interface declaration.
     */
    private JInterfaceDeclaration interfaceDeclaration(ArrayList<String> mods) {
        int line = scanner.token().line();
        // Need to have first the word INTERFACE
        mustBe(INTERFACE);
        // Followed by an identifier
        mustBe(IDENTIFIER);
        String name = scanner.previousToken().image();
        // Create a list for superInterfaces when you encounter an extends
        ArrayList<TypeName> superInterfaces = new ArrayList<TypeName>();
        // if you encounter an extends
        if (have(EXTENDS)) {
            // create a list with qualifiedIdentifiers
            do {
                superInterfaces.add(qualifiedIdentifier());
            } while (have(COMMA));
        } else {
            // otherwise the list is going to be empty
            superInterfaces = null;
        }
        // return a JInterfaceDeclaration
        return new JInterfaceDeclaration(line, mods, name, superInterfaces, interfaceBody());
    }
    /**
     * Parses a class body and returns a list of members in the body.
     *
     * <pre>
     *   classBody ::= LCURLY { modifiers memberDecl } RCURLY
     * </pre>
     *
     * @return a list of members in the class body.
     */
    private ArrayList<JMember> classBody() {
        ArrayList<JMember> members = new ArrayList<JMember>();
        mustBe(LCURLY);
        while (!see(RCURLY) && !see(EOF)) {
            ArrayList<String> mods = modifiers();
            members.add(memberDecl(mods));
        }
        mustBe(RCURLY);
        return members;
    }

    /**
     * Parses an interface body and returns a list of members in the body.
     *
     * <pre>
     *   interfaceBody ::= LCURLY { modifiers interfaceMemberDecl } RCURLY
     * </pre>
     *
     * @return a list of members in the class body.
     */
    private ArrayList<JMember> interfaceBody() {
        // This is copy-pasted from the classBody() method above. The only difference between the two is
        // the call to the interfaceMemberDecl rather than the memberDecl
        ArrayList<JMember> members = new ArrayList<JMember>();
        mustBe(LCURLY);
        while (!see(RCURLY) && !see(EOF)) {
            ArrayList<String> mods = modifiers();
            // I had added this part on a previous project, where I was implementing the parser for the
            // interface
            if (!mods.contains(ABSTRACT)) {
                mods.add(String.valueOf("abstract"));
                // in case the list with the modifiers doesn't have "public"
                // add "public" to them
                if(!mods.contains(PUBLIC)) {
                    mods.add(String.valueOf("public"));
                }
            }
            members.add(interfaceMemberDecl(mods));
        }
        mustBe(RCURLY);
        return members;
    }
    /**
     * Parses a member declaration and returns an AST for it.
     *
     * <pre>
     *   memberDecl ::= IDENTIFIER formalParameters [ THROWS qualifiedIdentifier { COMMA qualifiedIdentifier } ] block
     *                | ( VOID | type ) IDENTIFIER
     *                          formalParameters
     *                              [ THROWS qualifiedIdentifier { COMMA qualifiedIdentifier } ] ( block | SEMI )
     *                | type variableDeclarators SEMI
     * </pre>
     *
     * @param mods the class member modifiers.
     * @return an AST for a member declaration.
     */
    private JMember memberDecl(ArrayList<String> mods) {
        int line = scanner.token().line();
        JMember memberDecl = null;
        if (seeIdentLParen()) {
            // A constructor.
            mustBe(IDENTIFIER);
            String name = scanner.previousToken().image();
            ArrayList<JFormalParameter> params = formalParameters();
            // I added a list of type TypeName that will be containing the exceptions
            ArrayList<TypeName> exceptions = new ArrayList<TypeName>();
            // if you encounter THROWS then add qualifiedIdentifiers in the list
            // with the exceptions
            if (have(THROWS)) {
                // until you get a COMMA, keep adding qualified identifiers in the list of the exceptions
                do {
                    exceptions.add(qualifiedIdentifier());
                } while (have(COMMA));
            } else {
                // otherwise the list with the exceptions will be empty
                exceptions = null;
            }
            JBlock body = block();
            // change the parameter null to exceptions
            memberDecl = new JConstructorDeclaration(line, mods, name, params, exceptions, body);
        } else {
            Type type = null;
            if (have(VOID)) {
                // A void method.
                type = Type.VOID;
                mustBe(IDENTIFIER);
                String name = scanner.previousToken().image();
                ArrayList<JFormalParameter> params = formalParameters();
                // I added a list of type TypeName that will be containing the exceptions
                ArrayList<TypeName> exceptions = new ArrayList<TypeName>();
                // if you encounter THROWS then add qualifiedIdentifiers in the list
                // with the exceptions
                if (have(THROWS)) {
                    // until you get a COMMA, keep adding qualified identifiers in the list of the exceptions
                    do {
                        exceptions.add(qualifiedIdentifier());
                    } while (have(COMMA));
                } else {
                    // otherwise the exceptions list will be empty
                    exceptions = null;
                }
                JBlock body = have(SEMI) ? null : block();
                // change the parameter null to exceptions
                memberDecl = new JMethodDeclaration(line, mods, name, type, params, exceptions, body);
            } else {
                type = type();
                if (seeIdentLParen()) {
                    // A non void method.
                    mustBe(IDENTIFIER);
                    String name = scanner.previousToken().image();
                    ArrayList<JFormalParameter> params = formalParameters();
                    // I added a list of type TypeName that will be containing the exceptions
                    ArrayList<TypeName> exceptions = new ArrayList<TypeName>();
                    // if you encounter THROWS then add qualifiedIdentifiers in the list
                    // with the exceptions
                    if (have(THROWS)) {
                        // until you get a COMMA, keep adding qualified identifiers in the list of the exceptions
                        do {
                            exceptions.add(qualifiedIdentifier());
                        } while (have(COMMA));
                    } else {
                        // otherwise the list with the exceptions will be empty
                        exceptions = null;
                    }
                    JBlock body = have(SEMI) ? null : block();
                    // change the parameter null to exceptions
                    memberDecl = new JMethodDeclaration(line, mods, name, type, params, exceptions, body);
                } else {
                    // A field.
                    memberDecl = new JFieldDeclaration(line, mods, variableDeclarators(type));
                    mustBe(SEMI);
                }
            }
        }
        return memberDecl;
    }
    /**
     * Parses an interface member declaration and returns an AST for it.
     *
     * <pre>
     *   interfaceMemberDecl ::= ( VOID | type ) IDENTIFIER formalParameters
     *                                  [ THROWS qualifiedIdentifier { COMMA qualifiedIdentifier } ] SEMI
     *                          | type variableDeclarators SEMI
     * </pre>
     *
     * @param mods the interface member modifiers.
     * @return an AST for an interface member declaration.
     */
    private JMember interfaceMemberDecl(ArrayList<String> mods) {
        // I also copied a big chunk of this part of the code from the memberDecl() method above.
        int line = scanner.token().line();
        JMember interfaceMemberDecl = null;
        Type type = null;
        if (have(VOID)) {
            // A void method.
            type = Type.VOID;
            mustBe(IDENTIFIER);
            String name = scanner.previousToken().image();
            ArrayList<JFormalParameter> params = formalParameters();
            // I added a list of type TypeName that will be containing the exceptions
            ArrayList<TypeName> exceptions = new ArrayList<TypeName>();
            // if you encounter THROWS then add qualifiedIdentifiers in the list
            // with the exceptions
            if (have(THROWS)) {
                // until you get a COMMA, keep adding qualified identifiers in the list of the exceptions
                do {
                    exceptions.add(qualifiedIdentifier());
                } while (have(COMMA));
            } else {
                // otherwise the list with the exception will be empty
                exceptions = null;
            }
            // It should end with a SEMI
            mustBe(SEMI);
            // change the parameter of the body to null
            interfaceMemberDecl = new JMethodDeclaration(line, mods, name, type, params, exceptions, null);
        } else {
            type = type();
            if (seeIdentLParen()) {
                // A non void method.
                mustBe(IDENTIFIER);
                String name = scanner.previousToken().image();
                ArrayList<JFormalParameter> params = formalParameters();
                // I added a list of type TypeName that will be containing the exceptions
                ArrayList<TypeName> exceptions = new ArrayList<>();
                // if you encounter THROWS then add qualifiedIdentifiers in the list
                // with the exceptions
                if (have(THROWS)) {
                    // until you get a COMMA, keep adding qualified identifiers in the list of the exceptions
                    do {
                        exceptions.add(qualifiedIdentifier());
                    } while (have(COMMA));
                } else {
                    // otherwise the list with the exceptions will be empty
                    exceptions = null;
                }
                // It should end with a semi
                mustBe(SEMI);
                // change the parameter of the body to null
                interfaceMemberDecl = new JMethodDeclaration(line, mods, name, type, params, exceptions, null);
            } else {
                // A field.
                interfaceMemberDecl = new JFieldDeclaration(line, mods, variableDeclarators(type));
                mustBe(SEMI);
            }
        }
        return interfaceMemberDecl;
    }
    /**
     * Parses a block and returns an AST for it.
     *
     * <pre>
     *   block ::= LCURLY { blockStatement } RCURLY
     * </pre>
     *
     * @return an AST for a block.
     */
    private JBlock block() {
        int line = scanner.token().line();
        ArrayList<JStatement> statements = new ArrayList<JStatement>();
        mustBe(LCURLY);
        while (!see(RCURLY) && !see(EOF)) {
            statements.add(blockStatement());
        }
        mustBe(RCURLY);
        return new JBlock(line, statements);
    }

    /**
     * Parses a block statement and returns an AST for it.
     *
     * <pre>
     *   blockStatement ::= localVariableDeclarationStatement
     *                    | statement
     * </pre>
     *
     * @return an AST for a block statement.
     */
    private JStatement blockStatement() {
        if (seeLocalVariableDeclaration()) {
            return localVariableDeclarationStatement();
        } else {
            return statement();
        }
    }

    /**
     * Parses a statement and returns an AST for it.
     *
     * <pre>
     *   statement ::= block
     *               | IF parExpression statement [ ELSE statement ]
     *               | FOR LPAREN [ forInit ] SEMI [ expression ] SEMI [ forUpdate ] RPAREN statement
     *               | RETURN [ expression ] SEMI
     *               | SEMI
     *               | WHILE parExpression statement
     *               | DO statement WHILE parExpression SEMI
     *               | TRY block { CATCH LPAREN formalParameter RPAREN block } [ FINALLY block ]
     *               | SWITCH parExpression LCURLY { switchBlockStatementGroup } RCURLY
     *               | THROW expression SEMI
     *               | BREAK SEMI
     *               | CONTINUE SEMI
     *               | statementExpression SEMI
     * </pre>
     *
     * @return an AST for a statement.
     */
    private JStatement statement() {
        int line = scanner.token().line();
        if (see(LCURLY)) {
            return block();
        } else if (have(IF)) {
            JExpression test = parExpression();
            JStatement consequent = statement();
            JStatement alternate = have(ELSE) ? statement() : null;
            return new JIfStatement(line, test, consequent, alternate);
        // I added the option for the FOR
        } else if (have(FOR)) {
            mustBe(LPAREN);
            // the init will be a list of type Jstatement which is initialized to null
            ArrayList<JStatement> init = null;
            // variable expr of type JExpression for the expression part of the FOR which is initialized to null
            JExpression expr = null;
            // We have to look for any potential update which is also known as step
            // the variable update is an array and is of type JStatement. It's also initialized to null
            ArrayList<JStatement> update = null;
            // look if after the LPAREN there is not a SEMI, then there is a forInit()
            if (!have(SEMI)) {
                // call the method forInit()
                init = forInit();
                // a SEMI is necessary
                mustBe(SEMI);
            }
            // If there is not a SEMI after the first semi, then there is an expression
            if (!have(SEMI)) {
                // get the expression
                expr = expression();
                // which must be followed by a semi
                mustBe(SEMI);
            }
            // if there is an update
            if (!have(RPAREN)) {
                // get the update
                update = forUpdate();
                // which must be followed by a RPAREN ")"
                mustBe(RPAREN);
            }
            // We get the statement
            JStatement statement = statement();
            // And return a JForStatement with arguments the line, the array init, the expression, the array update
            // and the statement
            return new JForStatement(line, init, expr, update, statement);
        } else if (have(WHILE)) {
            JExpression test = parExpression();
            JStatement statement = statement();
            return new JWhileStatement(line, test, statement);
        // I added the option for the DO
        } else if (have(DO)) {
            // For the statement body
            JStatement statement = statement();
            // should be followed by a WHILE
            mustBe(WHILE);
            // condition or known as parExpression
            JExpression test = parExpression();
            // should end with a semicolon
            mustBe(SEMI);
            return new JDoStatement(line, statement, test);
            // I added the option for the try catch block
        } else if (have(TRY)) {
            // get the block after TRY
            JBlock tryBlock = block();
            // Create a list of parameters
            ArrayList<JFormalParameter> params = new ArrayList<JFormalParameter>();
            // Create a list of block that is contained inside the CATCH
            ArrayList<JBlock> catchBlocks = new ArrayList<JBlock>();
            // I have initiallized the FINALLY block to null
            JBlock finallyBlock = null;
            // If you see catch
            if(see(CATCH)) {
                // As long as you have CATCH
                while (have(CATCH)) {
                    // you should have a LPAREN
                    mustBe(LPAREN);
                    // add the formalParameters to the list with the params
                    params.add(formalParameter());
                    // you should have a RPAREN
                    mustBe(RPAREN);
                    // Add blocks to the list with all the blocks in the CATCH
                    catchBlocks.add(block());
                }
                // In case you encounter a FINALLY
                if (have(FINALLY)) {
                    // get the block that follows it
                    finallyBlock = block();
                }
            // In case you don't see catch you must have a FINALLY followed by a block
            } else {
                mustBe(FINALLY);
                finallyBlock = block();
            }
            // return a new JTryStatement with arguments a line the tryblock, the list with the parameters,
            // the list with the blocks in the ccatch, and the finallyblock if it's applicable.
            return new JTryStatement(line, tryBlock, params, catchBlocks, finallyBlock);
        // I added the option for the switch
        } else if (have(SWITCH)) {
            // Get the parExpression
            JExpression test = parExpression();
            // should be followed by an LCURLY "{"
            mustBe(LCURLY);
            // create a list that will contain each switch statement group
            ArrayList<SwitchStatementGroup> stmtGroup = new ArrayList<SwitchStatementGroup>();
            // as long as you don't see a RCURLY or the EOF
            // go through the whole switch block statement group
            while (!see(RCURLY) && !see(EOF)) {
                // Create a list with all the statements in the group
                stmtGroup.add(switchBlockStatementGroup());
            }
            mustBe(RCURLY);
            // return the JSwitchStatement with arguments being a line, an expression and the switch statement group
            return new JSwitchStatement(line, test, stmtGroup);
       // I added the option for the THROW
        } else if (have(THROW)) {
            // Get an expression and save it in the test Jexpression variable
            JExpression test = expression();
            // the expression should be followed by a SEMI
            mustBe(SEMI);
            // return a new JThrowStatement with arguments the line and the expression
            return new JThrowStatement(line, test);
        // I added the option for the break;
        } else if (have(BREAK)) {
            // a BREAK should be followed by a SEMI
            mustBe(SEMI);
            // return a new JBreakStatement with an argument being a line
            return new JBreakStatement(line);
        // I added the option for the continue;
        } else if (have(CONTINUE)) {
            // A CONTINUE should be followed by a SEMI
            mustBe(SEMI);
            // return a new JContinueStatement with an argument being a line
            return new JContinueStatement(line);
        } else if (have(RETURN)) {
            if (have(SEMI)) {
                return new JReturnStatement(line, null);
            } else {
                JExpression expr = expression();
                mustBe(SEMI);
                return new JReturnStatement(line, expr);
            }
        } else if (have(SEMI)) {
            return new JEmptyStatement(line);
        } else {
            // Must be a statementExpression.
            JStatement statement = statementExpression();
            mustBe(SEMI);
            return statement;
        }
    }

    /**
     * Parses and returns a list of formal parameters.
     *
     * <pre>
     *   formalParameters ::= LPAREN [ formalParameter { COMMA formalParameter } ] RPAREN
     * </pre>
     *
     * @return a list of formal parameters.
     */
    private ArrayList<JFormalParameter> formalParameters() {
        ArrayList<JFormalParameter> parameters = new ArrayList<JFormalParameter>();
        mustBe(LPAREN);
        if (have(RPAREN)) {
            return parameters;
        }
        do {
            parameters.add(formalParameter());
        } while (have(COMMA));
        mustBe(RPAREN);
        return parameters;
    }

    /**
     * Parses a formal parameter and returns an AST for it.
     *
     * <pre>
     *   formalParameter ::= type IDENTIFIER
     * </pre>
     *
     * @return an AST for a formal parameter.
     */
    private JFormalParameter formalParameter() {
        int line = scanner.token().line();
        Type type = type();
        mustBe(IDENTIFIER);
        String name = scanner.previousToken().image();
        return new JFormalParameter(line, name, type);
    }

    /**
     * Parses a parenthesized expression and returns an AST for it.
     *
     * <pre>
     *   parExpression ::= LPAREN expression RPAREN
     * </pre>
     *
     * @return an AST for a parenthesized expression.
     */
    private JExpression parExpression() {
        mustBe(LPAREN);
        JExpression expr = expression();
        mustBe(RPAREN);
        return expr;
    }

    /**
     * Parses and returns a list of statement expressions or a variable declarator in a form of a list
     * of statement expressions
     *
     * <pre>
     *   forInit ::= statementExpression { COMMA statementExpression }
     *              | type variableDeclarators
     * </pre>
     *
     * @return a list of statement expressions.
     */
    // I added the forInit()
    private ArrayList<JStatement> forInit() {
        // Create a new array named statements
        ArrayList<JStatement> statements = new ArrayList<JStatement>();
        // if it's not looking at a local variable Declaration
        if(!seeLocalVariableDeclaration()) {
            do {
                // add statement expression to the list statements
                statements.add(statementExpression());
            // keep adding until you don't encounter a comma anymore
            } while (have(COMMA));
            // return a list of statement expressions.
            return statements;
        }
        // get the line
        int line = scanner.token().line();
        Type type = type();
        // create a list of type declarators that will contain a single item
        ArrayList<JVariableDeclarator> vdecls = variableDeclarators(type);
        // add it to the list statements
        statements.add(new JVariableDeclaration(line, vdecls));
        // return the list statements.
        return statements;
    }

    /**
     * Parses and returns a list of statement Expressions that are specifically for the update part
     * of a for loop
     *
     * <pre>
     *   forUpdate ::= statementExpression { COMMA statementExpression }
     * </pre>
     *
     * @return a list of statement expressions.
     */
    private ArrayList<JStatement> forUpdate() {
        // Create a list to include all the statement Expressions
        ArrayList<JStatement> statements = new ArrayList<JStatement>();
        // until you encounter a COMMA
        do {
            // add statement Expressions to the list
            statements.add(statementExpression());
        } while (have(COMMA));
        return statements;
    }
    /**
     * Parses a switch block statement group and returns an AST for it.
     *
     * <pre>
     *   switchBlockStatementGroup ::= switchLabel {switchLabel} {blockStatement}
     * </pre>
     *
     * @return an AST for a switch block statement group
     */
    private SwitchStatementGroup switchBlockStatementGroup(){
        // Create a list that will contain all the switch labels
        ArrayList<JExpression> labels = new ArrayList<JExpression>();
        // Create a list that will contain all the switch statement blocks
        ArrayList<JStatement> stmtBlock = new ArrayList<JStatement>();
        // Until you see CASE or you see DEFAULT, keep adding the switch labels to the list.
        // This is happening because there may be CASE labels that do not have any statements aster
        // the COLON.
        do {
            labels.add(switchLabel());
        } while(see(CASE) || see(DEFAULT));
        // As long as you don't encounter a RCURLY, or a CASE, or a DEFAULT
        while(!see(RCURLY) && !see(CASE) && !see(DEFAULT)) {
            // add in the statement block list all the necessary statements
            stmtBlock.add(blockStatement());
        }
        // return a new SwitchStatementGroup with arguments being the list of switch labels and switch statement blocks
        return new SwitchStatementGroup(labels, stmtBlock);
    }
    /**
     * Parses a switch label and returns an AST for it.
     *
     * <pre>
     *   switchLabel ::= CASE expression :
     *                  | DEFAULT :
     * </pre>
     *
     * @return an AST for a switch label.
     */
    private JExpression switchLabel(){
        // we need to get the expression that is located between CASE and COLON,
        // or null if we have to deal with a DEFAULT
        JExpression expr = null;
        // if you encounter a CASE
        if (have(CASE)) {
            // get the expression
            expr = expression();
            // the expression should be followed by a COLON
            mustBe(COLON);
            // return the expression
            return expr;
        } else {
            // otherwise you are most likely dealing with a DEFAULT
            mustBe(DEFAULT);
            // which should be followed by a COLON
            mustBe(COLON);
            // return a null expression
            return expr;
        }
    }

    /**
     * Parses a local variable declaration statement and returns an AST for it.
     *
     * <pre>
     *   localVariableDeclarationStatement ::= type variableDeclarators SEMI
     * </pre>
     *
     * @return an AST for a local variable declaration statement.
     */
    private JVariableDeclaration localVariableDeclarationStatement() {
        int line = scanner.token().line();
        Type type = type();
        ArrayList<JVariableDeclarator> vdecls = variableDeclarators(type);
        mustBe(SEMI);
        return new JVariableDeclaration(line, vdecls);
    }
